tests/NormalTests/paczka1/fuzzy1/88104556.err
Error in line 6: S799 A994 12,8
Error in line 17: ozaBZZWVdg A994 71,8
Error in line 1: AloMM6u A994 67,5
Error in line 27: pisl5 A994 114,1
Error in line 29: kfe S701 94,1
Error in line 30: pisl5 S701 19,0
